tests/ui/pattern/deref-patterns/implicit-const-deref.stderr
error: constant of non-structural type `Vec<()>` in a pattern
  --> $DIR/implicit-const-deref.rs:14:9
   |
LL | const EMPTY: Vec<()> = Vec::new();
   | -------------------- constant defined here
...
LL |         EMPTY => {}
   |         ^^^^^ constant of non-structural type
   |
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
   |
   = note: `Vec<()>` is not usable in patterns
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
help: add a condition to the match arm checking for equality
   |
LL -         EMPTY => {}
LL +         binding if binding == EMPTY => {}
   |

error: aborting due to 1 previous error

